fix: cropper

--- a/src/app/shared/components/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/components/image-cropper/image-cropper.component.scss
@@ -38,7 +38,7 @@
     max-width:800px;
     display: grid;
     grid-template-rows: 50px 1fr 70px;
-    @media(max-width:799) {
+    @media(max-width:799px) {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -54,10 +54,12 @@
             flex: auto;
             display: flex;
             align-items: center;
+            width: 100%;
         }
        .crop-wrap {
         @media(max-width:799px) {
            height: fit-content;
+           flex:auto;
         }
         @media(min-width:800px) {
             width:700px;
@@ -75,11 +77,14 @@
     }
     .button-wrapper {
         width: 100%;
-        height: 50px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        align-items: center;
+        height: 100px;
+        .buttons {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto;
+            align-items: center;
+        }
+    
         @media(max-width:$mobile-breakpoint) {
             width: 100%;
         }
